[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_trading_pubsub"
version = "0.1.0"
description = "A professional Python library for building publish-subscribe messaging systems tailored for trading applications"
readme = "README.md"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
keywords = [
    "pubsub",
    "messaging",
    "trading",
    "socketio",
    "realtime",
    "async",
    "websocket",
]
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.0",
    "flask-socketio==5.3.6",
    "eventlet~=0.40.3",
    "python-socketio[client]",
    "requests",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "requests-mock>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/venantvr/Python.Trading.PubSub"
Documentation = "https://github.com/venantvr/Python.Trading.PubSub"
Repository = "https://github.com/venantvr/Python.Trading.PubSub.git"
"Bug Tracker" = "https://github.com/venantvr/Python.Trading.PubSub/issues"
Changelog = "https://github.com/venantvr/Python.Trading.PubSub/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "python_trading_pubsub",
    "python_trading_pubsub.core",
    "python_trading_pubsub.business",
    "python_trading_pubsub.business.tools",
    "python_trading_pubsub.business.enums",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.md",
    "*.yml",
    "*.yaml",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pylint.messages_control]
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0913",
    "W0212",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "id",
    "ip",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "build",
    "dist",
]
skips = [
    "B101",
]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",
    "W503",
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D201",
    "D202",
    "D205",
    "D208",
    "D209",
    "D210",
    "D211",
    "D212",
    "D213",
    "D214",
    "D215",
    "D300",
    "D301",
    "D400",
    "D401",
    "D402",
    "D403",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D415",
    "D416",
    "D417",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
    "test_*.py:F401,F811",
]
